
$Id: changes.txt,v 1.20 2005/07/11 13:52:30 vvd0 Exp $

----
MVDSV v0.179 Beta DEVELOP build 2029 (2005.07.11)
[server]
- new cvar sv_registrationinfo - text shown before "enter login" (RFE #1198104)
(by hdworak)
- new cvar sv_forcenick - if the player has logged in ('accounts' file),
  force his nick to match the login and forbid changing nickname (RFE #1198108)
  0 - don't force
  1 - as login
  default: 0
(by hdworak)
- bugfix: format string vulnerabilities (by droogie)
- new command modfraglogfile - turn on/off parsing mod messages for frags and logging in
  modfrag_N.log file with any additional info (weapon and etc.) for composition
  more detailed statistics (EXPERIMENTAL)
  (because we have no sources of ktpro :-()
(by kreon and VVD, idea by gLAd)
- qvm engine updated to version 7
(Thanks to SD-Angel)
- key *qvm was moved from serverinfo to localinfo
- new cvar sv_hashpasswords - keep hashed passwords in the 'accounts' file (RFE #1198101)
  0 - plain passwords
  1 - hashed passwords (sha1)
  default: 1
(by hdworak)
- bugfix: now if server can't write log or demo, then it close logfile and stop logging
and cancel recording of current demo (bug #1057459)
- build: define REGEX, for use external regex lib for listing demos
  (for example: FreeBSD have regex functions in libc)
  else used integrated part of PCRE 5.0 library - http://www.pcre.org/
(Thanks to BorisU)
- new cvar sv_demoRegexp - all files meet the conditions regexp accepted as demos (for listing)
  default: "\.mvd(\.(gz|bz2|rar|zip))?$"
- give back from EXPEREMENTAL changes in 0.178b:
  'added drop client if no empty slots after "server is full" message (EXPERIMENTAL)'
- ATTENTION: default value of sv_crypt_rcon now is 1;
  use clients with rcon password encryption support (ezQauke, qwdplayer) or set to 0 in server.cfg
- added support of halflife maps - BSP version 30 (from ezQuake)
- new 'cmd maps' - show maps list from localinfo 1000 - 1999
  (supported only by ktpro 1.63 build 42795 and newer)