@@ -15,8 +15,8 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-	$Id: version.h,v 1.2 2005/05/27 15:09:56 vvd0 Exp $
+	$Id: version.h,v 1.3 2005/07/15 15:52:55 vvd0 Exp $
 */
 
-#define VERSION "QWDtools ver. 0.175"
+#define VERSION "QWDtools ver. 0.179"
 
